Seccion de certificaciones

--- a/src/styles/Panels.css
+++ b/src/styles/Panels.css
@@ -4,6 +4,9 @@
 
 .paneltextImage .info-text {
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .paneltextImage .image-side {
